--- a/classrooms.html
+++ b/classrooms.html
@@ -40,30 +40,32 @@
                 <div class="nav-profile-pic"><img
                     src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                     alt="profile picture">
-                    <div class="manage-account-modal">
-                        <div class="content-box">
-                            <div class="user-data">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile picture"></div>
-                                <div>
-                                    <div class="user-name">Mhmd Hussein</div>
-                                    <div class="user-email">mohammad.hussein377@gmail.com</div>
+                    <div class="manage-account-modal hide">
+                        <div class="manage-account-modal-top">
+                            <div class="content-box">
+                                <div class="user-data">
+                                    <div class="image"><img
+                                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                        alt="profile picture"></div>
+                                    <div>
+                                        <div class="user-name">Mhmd Hussein</div>
+                                        <div class="user-email">mohammad.hussein377@gmail.com</div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div>
-                                <button>Manage your google account</button>
+                                <div class="manage-account-button">
+                                    <button>Manage your google account</button>
+                                </div>
                             </div>
                         </div>
                         <div class="sign-out">
                             <div>
-                                <i class="fa-solid fa-right-from-bracket"></i>
+                                <i class="fa-solid fa-right-from-bracket fa-lg"></i>
                             </div>
                             <div>Sign out</div>
                         </div>
-                        <div>
+                        <div class="bottom">
                             <span>Privacy policy</span>
-                            <span>.</span>
+                            <span class="dot"><i class="fa-solid fa-circle"></i></span>
                             <span>Terms of service</span>
                         </div>
                     </div>
