--- a/classrooms.html
+++ b/classrooms.html
@@ -14,6 +14,39 @@
         <title>Classrooms</title>
     </head>
     <body>
+        <!-- MANAGE ACCOUNT MODAL -->
+        <div id="manage-account-modal" class="manage-account-modal hide">
+            <div class="manage-account-modal-top">
+                <div class="content-box">
+                    <div class="user-data">
+                        <div class="image"><img
+                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                            alt="profile picture"></div>
+                        <div>
+                            <div class="user-name">Mhmd Hussein</div>
+                            <div class="user-email">mohammad.hussein377@gmail.com</div>
+                        </div>
+                    </div>
+                    <div class="manage-account-button">
+                        <button>Manage your google account</button>
+                    </div>
+                </div>
+            </div>
+            <div id="sign-out" class="sign-out">
+                <div>
+                    <i class="fa-solid fa-right-from-bracket fa-lg"></i>
+                </div>
+                <div>Sign out</div>
+            </div>
+            <div class="bottom">
+                <span>Privacy policy</span>
+                <span class="dot">
+                    <i class="fa-solid fa-circle"></i>
+                </span>
+                <span>Terms of service</span>
+            </div>
+        </div>
+        <!-- NAVBAR -->
         <div class="navbar">
             <div class="left-navbar">
                 <div id="burgerIcon" class="icon burger-icon">
@@ -40,37 +73,7 @@
                 <div id="profile-pic" class="nav-profile-pic"><img
                     src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
                     alt="profile picture">
-                    <div id="manage-account-modal" class="manage-account-modal hide">
-                        <div class="manage-account-modal-top">
-                            <div class="content-box">
-                                <div class="user-data">
-                                    <div class="image"><img
-                                        src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                        alt="profile picture"></div>
-                                    <div>
-                                        <div class="user-name">Mhmd Hussein</div>
-                                        <div class="user-email">mohammad.hussein377@gmail.com</div>
-                                    </div>
-                                </div>
-                                <div class="manage-account-button">
-                                    <button>Manage your google account</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="sign-out" class="sign-out">
-                            <div>
-                                <i class="fa-solid fa-right-from-bracket fa-lg"></i>
-                            </div>
-                            <div>Sign out</div>
-                        </div>
-                        <div class="bottom">
-                            <span>Privacy policy</span>
-                            <span class="dot"><i class="fa-solid fa-circle"></i></span>
-                            <span>Terms of service</span>
-                        </div>
-                    </div>
                 </div>
-
             </div>
         </div>
         <!-- <div class="arrow-icon">
