--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -135,6 +135,38 @@
                     </div>
                     <div class="announcements">
                         <div class="announcement">
+                            <!-- <div class="announcement-top">
+                                <div>
+                                    <div class="user-data">
+                                        <div class="profile-pic"><img
+                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                            alt="profile-picture"></div>
+                                        <div>
+                                            <div class="name">Joe Haddad</div>
+                                            <p class="date">02:32</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+                                    </div>
+                                </div>
+                                <div class="announcement-content">
+                                    Mohammad Hussein was here
+                                </div>
+                            </div>
+                            <div class="announcement-comment">
+                                <div class="profile-pic"><img
+                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
+                                    alt="profile-picture"></div>
+                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
+                                <div class="share-icon">
+                                    <i class="fa-solid fa-share"></i>
+                                </div>
+                            </div> -->
+
+                        </div>
+
+                        <!-- <div class="announcement">
                             <div class="announcement-top">
                                 <div>
                                     <div class="user-data">
@@ -163,39 +195,7 @@
                                     <i class="fa-solid fa-share"></i>
                                 </div>
                             </div>
-
-                        </div>
-
-                        <div class="announcement">
-                            <div class="announcement-top">
-                                <div>
-                                    <div class="user-data">
-                                        <div class="profile-pic"><img
-                                            src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                            alt="profile-picture"></div>
-                                        <div>
-                                            <div class="name">Joe Haddad</div>
-                                            <p class="date">02:32</p>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
-                                    </div>
-                                </div>
-                                <div class="announcement-content">
-                                    Mohammad Hussein was here
-                                </div>
-                            </div>
-                            <div class="announcement-comment">
-                                <div class="profile-pic"><img
-                                    src="https://img.freepik.com/free-photo/portrait-white-man-isolated_53876-40306.jpg?w=900&t=st=1689959898~exp=1689960498~hmac=24710ce7cf04054980189577c5643d038fc23a6b647b45454607e905f111cffb"
-                                    alt="profile-picture"></div>
-                                <div class="comment-input"><input placeholder="Add class comment" type="text"></div>
-                                <div class="share-icon">
-                                    <i class="fa-solid fa-share"></i>
-                                </div>
-                            </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
