--- a/teacher_stream.html
+++ b/teacher_stream.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div>
-                            <div id="class_code" class="google-meet-link">nhucw3p</div>
+                            <div id="class_code" class="google-meet-link"></div>
                             <div class="icon">
                                 <i class="fa-solid fa-expand"></i>
                             </div>
